# chessvit

./: README.md  pyproject.toml
chesscog/core/: evaluation.py  statistics.py
chesscog/core/dataset/: dataset.py  (+1 more)
chesscog/corner_detection/: detect_corners.py
chesscog/occupancy_classifier/: create_configs.py  create_dataset.py  models.py
chesscog/piece_classifier/: create_dataset.py  models.py
chesscog/piece_segmenter/: __init__.py  create_configs.py  evaluate.py  models.py  train.py
chesscog/recognition/: recognition.py
chesscog/transfer_learning/: train.py
config/: _classifier_base.yaml
config/occupancy_classifier/: MaxVit.yaml  SwinTV2.yaml  VITB16.yaml  VITL16.yaml  _base.yaml  _base_pretrained.yaml  _base_pretrained_vit.yaml  vit_b_16.yaml  vit_b_16_centercrop.yaml  vit_b_32.yaml  vit_b_32_centercrop.yaml  vit_l_16.yaml  vit_l_16_centercrop.yaml  vit_l_32.yaml  vit_l_32_centercrop.yaml
config/piece_classifier/: MaxVit.yaml  SwinBV2.yaml  VITB16.yaml  VITL16.yaml  _base.yaml  _base_pretrained.yaml  vit_b_16.yaml  vit_b_32.yaml  vit_l_16.yaml  vit_l_32.yaml
config/piece_segmenter/: DLResNet.yaml  _base.yaml  _base_pretrained.yaml
results/occupancy_classifier/: evaluate.csv
results/piece_classifier/: evaluate.csv
results/piece_segmenter/: evaluate.csv
results/recognition/: test.csv
results/recognition_mi/: test.csv
results/recognition_mm/: test.csv
results/recognition_mv/: test.csv
results/recognition_ri/: test.csv  val.csv
results/recognition_rm/: test.csv  train.csv  val.csv
results/recognition_rv/: test.csv  train.csv  val.csv
(+4 files in other folders)
