[project]
name = "ChessVit"
version = "0.1.0"
description = ""
authors = [
    {name = "Manuel Ordoñez",email = "manuelordzslv@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"


[tool.poetry]
packages = [{include = "test_demo", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=6.0.0,<7.0.0)",
    "pytest-mock",
]

[tool.poetry.group.main.dependencies]
sphinx = { version = "^4.1.2", optional = true }
sphinx-rtd-theme = { version = "^0.5.2", optional = true }
m2r2 = { version = "^0.3.1", optional = true }
opencv-python = "^4.12.0"
numpy = "^2.2.0"
Pillow = "^11.3.0"
matplotlib = "^3.9.0"
torch = "^2.8"
torchvision = "^0.23"
tensorboard = "^2.20.0"
pandas = "^2.3.2"
scikit-learn = "^1.6.0"
tqdm = "^4.67.1"
googledrivedownloader = "^0.4"
recap = "^0.1.6"
chess = "^1.6.1"
osfclient = "^0.0.5"
setuptools = "80.9.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^2.2.8"
autopep8 = "^1.5.4"
pylint = "^2.6.0"
pytest = "^6.1.1"
toml = "^0.10.2"
pdoc3 = "^0.9.2"

# [tool.poetry.group.extra.dependencies]
# docs = ["sphinx", "sphinx-rtd-theme", "m2r2"]
